--- a/ElProceso/edustream/.gitignore
+++ b/ElProceso/edustream/.gitignore
@@ -1,2 +1,55 @@
+# Variables de entorno
 .env
+*.env
+.env.local
+.env.development
+.env.production
+
+# Backend específico
 edustream/SRC/backend/.env
+
+# Archivos Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+
+# Node modules (si usas JavaScript)
+node_modules/
+npm-debug.log*
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
+
+# Archivos temporales
+*.tmp
+*.temp
+temp/
